added tkinter for future matplotlib support

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,7 +20,8 @@ RUN apt update && apt install -y \
     cmake \
     libboost-all-dev \
     libboost-python-dev \
-    libboost-thread-dev
+    libboost-thread-dev \
+    python3-tk
 
 # Additional Python Packages
 RUN pip3 install --upgrade pip
